[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-forge"
version = "0.0.0"
description = "My CV builder"
authors = [{ name = "Laurent Van Eesbeeck" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_url = "https://github.com/laurentvees/cv-forge/compare/{prev_tag}...{current_tag}"


